<resources>
    <string name="app_name">dotAndBoxes</string>
    <string name="user_name">Enter username</string>
    <string name="log_in">LOG IN</string>
    <string name="create_game">Create New Game</string>
    <string name="retry_connection">Retry Connection</string>
    <string name="open_lobby">Open Lobbies:</string>
    <string name="game_owner">%s\'s Game</string>
    <string name="display_user">Welcome %s!</string>
    <string name="game_size">Game Size: %1$d by %2$d</string>
    <string name="join">Join Game</string>
    <string name="exit">Exit Game</string>
    <string name="end">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="loggingin">LOGGING IN</string>
    <string name="create">Connect</string>
    <string name="end_conf">Are you sure you want to exit? All progress will be lost after disconnecting </string>
    <string name="end_conf2">Are you sure you want to exit? Exiting as the game owner will shut down this game. </string>
    <string name="attribute">expand</string>
    <string name="slide_start">3 by 3</string>
    <string name="slide_end">18 by 18</string>
    <string name="player">You color is %s. Your opponent is user: %s</string>
    <string name="warning">Username is taken. Try another one</string>
    <string name="welcome">Dots and Boxes!</string>
</resources>
