<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.github.florent37.expansionpanel.ExpansionHeader
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:expansion_headerIndicator="@id/headerIndicator"
        app:expansion_layout="@id/expansionLayout"
        app:expansion_toggleOnClick="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/create_game_owner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/game_owner"
                android:layout_weight="1"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/headerIndicator"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="right|end"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/attribute"
                app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp" />
        </LinearLayout>


    </com.github.florent37.expansionpanel.ExpansionHeader>

    <com.github.florent37.expansionpanel.ExpansionLayout
        android:id="@+id/expansionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:expansion_expanded="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sizeDisplay"
                android:textSize="20sp"
                android:text="@string/game_size"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/slide_start"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <SeekBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBar"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:max="27"
                    android:indeterminate="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/slide_end"
                    android:id="@+id/textView3"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

            <Button
                android:id="@+id/create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/create" />
        </LinearLayout>


    </com.github.florent37.expansionpanel.ExpansionLayout>


</LinearLayout>