<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.github.florent37.expansionpanel.ExpansionHeader
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:expansion_headerIndicator="@id/headerIndicator"
        app:expansion_layout="@id/expansionLayout"
        app:expansion_toggleOnClick="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/game_owner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/game_owner"
                android:layout_weight="1"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/headerIndicator"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="right|end"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/attribute"
                app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp" />
        </LinearLayout>


    </com.github.florent37.expansionpanel.ExpansionHeader>

    <com.github.florent37.expansionpanel.ExpansionLayout
        android:id="@+id/expansionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:expansion_expanded="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/game_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_size"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/join_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/join" />
        </LinearLayout>


    </com.github.florent37.expansionpanel.ExpansionLayout>


</LinearLayout>