<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#002E0505"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/display_user"
            android:textColor="#081D91"
            android:textSize="24sp">

        </TextView>

        <LinearLayout
            android:id="@+id/loadGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressSpinner"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/retryConnectButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/retry_connection"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/OpenLobbyGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_lobby"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/openGamesList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <Button
                android:id="@+id/createGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_game" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>